@@ -219,10 +219,10 @@ class TestStacking(TestCaseWithBranch):
         parent_bzrdir.get_config().set_default_stack_on('stack-on')
         source = self.make_branch('source')
         target = source.bzrdir.sprout('target').open_branch()
-        try:
-            self.assertEqual('../stack-on', target.get_stacked_on_url())
-        except errors.UnstackableBranchFormat:
-            pass
+        # XXX: Determining stacking from a containing bzrdir has been
+        #      explicitly disabled.
+        self.assertRaises((errors.UnstackableBranchFormat, errors.NotStacked),
+                          target.get_stacked_on_url)
 
     def test_clone_stacking_policy_handling(self):
         """Obey policy where possible, ignore otherwise."""
@@ -231,10 +231,10 @@ class TestStacking(TestCaseWithBranch):
         parent_bzrdir.get_config().set_default_stack_on('stack-on')
         source = self.make_branch('source')
         target = source.bzrdir.clone('target').open_branch()
-        try:
-            self.assertEqual('../stack-on', target.get_stacked_on_url())
-        except errors.UnstackableBranchFormat:
-            pass
+        # XXX: Determining stacking from a containing bzrdir has been
+        #      explicitly disabled.
+        self.assertRaises((errors.UnstackableBranchFormat, errors.NotStacked),
+                          target.get_stacked_on_url)
 
     def prepare_stacked_on_fetch(self):
         stack_on = self.make_branch_and_tree('stack-on')
