@@ -424,22 +424,23 @@ class TestRepositoryAcquisitionPolicy(TestCaseWithTransport):
                          my_bzrdir.root_transport.base)
         self.assertFalse(repo.is_shared())
 
-
     def test_determine_stacking_policy(self):
         parent_bzrdir = self.make_bzrdir('.')
         child_bzrdir = self.make_bzrdir('child')
         parent_bzrdir.get_config().set_default_stack_on('http://example.org')
         repo_policy = child_bzrdir.determine_repository_policy()
-        self.assertEqual('http://example.org', repo_policy._stack_on)
+        # XXX: Determining stacking from a containing bzrdir has been
+        #      explicitly disabled.
+        self.assertIs(None, repo_policy._stack_on)
 
     def test_determine_stacking_policy_relative(self):
         parent_bzrdir = self.make_bzrdir('.')
         child_bzrdir = self.make_bzrdir('child')
         parent_bzrdir.get_config().set_default_stack_on('child2')
         repo_policy = child_bzrdir.determine_repository_policy()
-        self.assertEqual('child2', repo_policy._stack_on)
-        self.assertEqual(parent_bzrdir.root_transport.base,
-                         repo_policy._stack_on_pwd)
+        # XXX: Determining stacking from a containing bzrdir has been
+        #      explicitly disabled.
+        self.assertIs(None, repo_policy._stack_on)
 
     def prepare_default_stacking(self):
         parent_bzrdir = self.make_bzrdir('.')
@@ -451,14 +452,18 @@ class TestRepositoryAcquisitionPolicy(TestCaseWithTransport):
     def test_clone_on_transport_obeys_stacking_policy(self):
         child_branch, new_child_transport = self.prepare_default_stacking()
         new_child = child_branch.bzrdir.clone_on_transport(new_child_transport)
-        self.assertEqual(child_branch.base,
-                         new_child.open_branch().get_stacked_on_url())
+        # XXX: Determining stacking from a containing bzrdir has been
+        #      explicitly disabled.
+        self.assertRaises(errors.NotStacked,
+                          new_child.open_branch().get_stacked_on_url)
 
     def test_sprout_obeys_stacking_policy(self):
         child_branch, new_child_transport = self.prepare_default_stacking()
         new_child = child_branch.bzrdir.sprout(new_child_transport.base)
-        self.assertEqual(child_branch.base,
-                         new_child.open_branch().get_stacked_on_url())
+        # XXX: Determining stacking from a containing bzrdir has been
+        #      explicitly disabled.
+        self.assertRaises(errors.NotStacked,
+                          new_child.open_branch().get_stacked_on_url)
 
     def test_add_fallback_repo_handles_absolute_urls(self):
         stack_on = self.make_branch('stack_on', format='development1')
